--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^1.41.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.0.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
